feat: ボット機能のためにDiscord.jsを統合し、音楽レポート機能を追加しました。
- ボットとのインタラクションを可能にするため、discord.jsを依存関係として追加しました。
- ボットの接続と通知を管理するためのDiscordBotServiceを作成しました。
- 音楽レポートを自動生成するためのSchedulerServiceを実装しました。
- LastFmServiceを強化し、音楽レポート（日次、週次、月次）を生成できるようにしました。
- MusicStatusAppを更新し、レポートと通知に新しいサービスを活用できるようにしました。
- Discordボットの設定用の環境変数を追加しました。
- アプリケーション全体のログ記録とエラー処理を改善しました。

--- a/.env.example
+++ b/.env.example
@@ -2,9 +2,14 @@
 LASTFM_API_KEY=your_lastfm_api_key_here
 LASTFM_USERNAME=your_lastfm_username_here
 
-# Discord設定
+# Discord Rich Presence設定
 DISCORD_CLIENT_ID=your_discord_application_id_here
 DISCORD_USER_ID=your_discord_user_id_here
+
+# Discord Bot設定
+DISCORD_BOT_TOKEN=your_discord_bot_token_here
+DISCORD_NOW_PLAYING_CHANNEL_ID=your_nowplaying_channel_id_here
+DISCORD_REPORT_CHANNEL_ID=your_report_channel_id_here
 
 # アプリケーション設定
 UPDATE_INTERVAL=30000
