--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "dependencies": {
     "axios": "^1.10.0",
     "discord-rpc": "^4.0.1",
+    "discord.js": "^14.21.0",
     "dotenv": "^17.0.1",
     "node-cron": "^4.2.0"
   }
