--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "license": "ISC",
   "description": "Discord Rich Presence application that displays now playing music from Last.fm",
   "devDependencies": {
+    "@types/chart.js": "^2.9.41",
     "@types/discord-rpc": "^4.0.9",
     "@types/node": "^24.0.10",
     "nodemon": "^3.1.10",
@@ -23,6 +24,9 @@
   },
   "dependencies": {
     "axios": "^1.10.0",
+    "canvas": "^3.1.2",
+    "chart.js": "^4.5.0",
+    "chartjs-node-canvas": "^5.0.0",
     "discord-rpc": "^4.0.1",
     "discord.js": "^14.21.0",
     "dotenv": "^17.0.1",
