--- a/package.json
+++ b/package.json
@@ -23,13 +23,19 @@
     "typescript": "^5.8.3"
   },
   "dependencies": {
+    "@types/cors": "^2.8.19",
+    "@types/express": "^5.0.3",
+    "@types/ws": "^8.18.1",
     "axios": "^1.10.0",
     "canvas": "^3.1.2",
     "chart.js": "^4.5.0",
     "chartjs-node-canvas": "^5.0.0",
+    "cors": "^2.8.5",
     "discord-rpc": "^4.0.1",
     "discord.js": "^14.21.0",
     "dotenv": "^17.0.1",
-    "node-cron": "^4.2.0"
+    "express": "^5.1.0",
+    "node-cron": "^4.2.0",
+    "ws": "^8.18.3"
   }
 }
