feat: HTTPS サポートと証明書管理の追加
- package.json を更新し、HTTPS 開発と証明書生成用のスクリプトを追加しました。
- public/test-client.html を修正し、プロトコルに基づいた動的な WebSocket ポートをサポートしました。
- src/index.ts のシャットダウン処理を強化し、タイムアウトによるサービス停止に対応しました。
- src/services/web-server.ts に HTTPS サーバーのセットアップを統合し、mkcert の自動更新機能を追加しました。
- Express アプリで CORS ヘッダーとセキュリティヘッダーを設定しました。
- src/utils/config.ts に HTTPS の設定オプションを追加しました。
- アプリケーション全体のログ記録とエラー処理を改善しました。

--- a/package.json
+++ b/package.json
@@ -5,9 +5,14 @@
   "scripts": {
     "build": "tsc",
     "start": "node dist/index.js",
+    "start:https": "HTTPS_ENABLED=true npm run start",
     "dev": "ts-node src/index.ts",
+    "dev:https": "HTTPS_ENABLED=true npm run dev",
     "watch": "nodemon --exec ts-node src/index.ts",
+    "watch:https": "HTTPS_ENABLED=true npm run watch",
     "clean": "rm -rf dist",
+    "cert:generate": "./scripts/generate-certificates.sh",
+    "cert:create": "mkcert localhost 127.0.0.1 ::1 192.168.40.99",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -16,7 +21,9 @@
   "description": "Discord Rich Presence application that displays now playing music from Last.fm",
   "devDependencies": {
     "@types/chart.js": "^2.9.41",
+    "@types/compression": "^1.8.1",
     "@types/discord-rpc": "^4.0.9",
+    "@types/helmet": "^0.0.48",
     "@types/node": "^24.0.10",
     "nodemon": "^3.1.10",
     "ts-node": "^10.9.2",
@@ -28,13 +35,19 @@
     "@types/ws": "^8.18.1",
     "axios": "^1.10.0",
     "canvas": "^3.1.2",
+    "chalk": "^5.4.1",
     "chart.js": "^4.5.0",
     "chartjs-node-canvas": "^5.0.0",
+    "chokidar": "^4.0.3",
+    "commander": "^14.0.0",
+    "compression": "^1.8.0",
     "cors": "^2.8.5",
     "discord-rpc": "^4.0.1",
     "discord.js": "^14.21.0",
     "dotenv": "^17.0.1",
     "express": "^5.1.0",
+    "fs-extra": "^11.3.0",
+    "helmet": "^8.1.0",
     "node-cron": "^4.2.0",
     "ws": "^8.18.3"
   }
