--- a/.env.example
+++ b/.env.example
@@ -13,3 +13,16 @@ DISCORD_REPORT_CHANNEL_ID=your_report_channel_id_here
 
 # アプリケーション設定
 UPDATE_INTERVAL=15000
+
+# Port設定
+WEB_SERVER_PORT=3001
+HTTPS_ENABLED=false
+HTTPS_PORT=8443
+HTTPS_KEY_PATH=./localhost+3-key.pem
+HTTPS_CERT_PATH=./localhost+3.pem
+
+# 証明書自動更新設定
+AUTO_RENEWAL=true
+CERT_WARNING_DAYS=10
+CERT_CRON_PATTERN="0 2 * * 0"
+HTTPS_DOMAINS=localhost,127.0.0.1,::1
