--- a/.env.example
+++ b/.env.example
@@ -15,7 +15,7 @@ DISCORD_REPORT_CHANNEL_ID=your_report_channel_id_here
 UPDATE_INTERVAL=15000
 
 # Port設定
-WEB_SERVER_PORT=3001
+HTTP_PORT=3001
 HTTPS_ENABLED=false
 HTTPS_PORT=8443
 HTTPS_KEY_PATH=./localhost+3-key.pem
