feat: CORS設定管理モジュールを追加し、Webサーバーでの動的インポートを実装

--- a/.gitignore
+++ b/.gitignore
@@ -110,3 +110,7 @@ Thumbs.db
 *.csr
 *.p12
 localhost+*
+
+# CORS configuration
+# This file is used to manage CORS settings for the web server.
+cors.json
