feat: sqlite3の型定義と依存関係を追加

--- a/.gitignore
+++ b/.gitignore
@@ -114,3 +114,6 @@ localhost+*
 # CORS configuration
 # This file is used to manage CORS settings for the web server.
 cors.json
+
+# Cache database files
+*.db
