--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   "dependencies": {
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.3",
+    "@types/sqlite3": "^3.1.11",
     "@types/ws": "^8.18.1",
     "axios": "^1.10.0",
     "canvas": "^3.1.2",
@@ -44,6 +45,7 @@
     "fs-extra": "^11.3.0",
     "helmet": "^8.1.0",
     "node-cron": "^4.2.0",
+    "sqlite3": "^5.1.7",
     "ws": "^8.18.3"
   }
 }
