feat: Spotify サービスの統合により、画像検索とマッチング機能が強化されました。
- SpotifyService を追加し、Spotify API との連携（トラックやアーティストの検索、画像検索など）に対応しました。
- LastFmService を強化し、SpotifyService を活用して画像品質とマッチング機能を向上しました。
- プレースホルダー画像を識別し、画像品質を評価する画像検出ユーティリティを実装しました。
- NowPlayingInfo と RecentTrackInfo に Spotify 統合用の新しいフィールドを追加しました。
- パフォーマンスを最適化するため、Spotify 画像のキャッシュメカニズムを導入しました。
- Spotify 統合設定をサポートするように設定を変更しました。
- Spotify と Last.fm データの類似度スコアを計算するマッチングユーティリティを追加しました。

--- a/.env.example
+++ b/.env.example
@@ -26,3 +26,11 @@ AUTO_RENEWAL=true
 CERT_WARNING_DAYS=10
 CERT_CRON_PATTERN="0 2 * * 0"
 HTTPS_DOMAINS=localhost,127.0.0.1,::1
+
+# Spotify API設定
+SPOTIFY_CLIENT_ID=your_spotify_client_id_here
+SPOTIFY_CLIENT_SECRET=your_spotify_client_secret_here
+SPOTIFY_ENABLED=true
+SPOTIFY_CACHE_EXPIRY_DAYS=7
+SPOTIFY_MATCH_THRESHOLD=0.7
+SPOTIFY_REQUEST_TIMEOUT=10000
